adjust styles slightly to look much better, fix colors on plus and minus icons, and align text in title rows better

--- a/tree_project/frontend/styles/components/icon.scss
+++ b/tree_project/frontend/styles/components/icon.scss
@@ -8,7 +8,7 @@ $sprite-offset: -14px;
 
   img {
     object-fit: none;
-    object-position: 0 0;
+
   }
   .folder {
     left: 0;
@@ -21,12 +21,13 @@ $sprite-offset: -14px;
   }
   .plus {
     object-position: 6 * $sprite-offset;
-    filter: hue-rotate(180deg);
-  }
-  .x {
-    object-position: 4 * $sprite-offset;
+    filter: invert(50%);
   }
   .minus {
     object-position: 7 * $sprite-offset;
+    filter: invert(50%);
+  }
+  .x {
+    object-position: 4 * $sprite-offset;
   }
 }
