--- a/tree_project/frontend/styles/components/item_title.scss
+++ b/tree_project/frontend/styles/components/item_title.scss
@@ -3,3 +3,7 @@
   flex-direction: row;
   justify-content: flex-start;
 }
+
+.file-name {
+  margin-top: 0.2em;
+}
